3.3/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: praqma/network-multitool:latest
        ports:
        - containerPort: 80
          name: http-port
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
    - name: multitool-back
      port: 8081
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: backend
