3.3/cache.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: multitool
        image: praqma/network-multitool:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
spec:
  ports:
    - name: multitool-front
      port: 8080
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: cache
