3.3/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: multitool
        image: praqma/network-multitool:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
spec:
  ports:
    - name: multitool-front
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: frontend
